actu et auteur Informatique participative

--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -7,20 +7,20 @@ authors:
     sherazade:
         name: Sherazade Djeballah
         description: Ingénieure pédagogique
-        avatar: https://learninglab.gitlabpages.inria.fr/serious-game/smartphone/blog/img/Sherazade.jpeg
+        avatar: https://phoneimpact.inria.fr/blog/img/Sherazade.jpeg
         url: https://www.linkedin.com/in/sherazade-djeballah-6a8759233/
     sabah:
         name: Sabah Khalfa
         description: Ingénieure pédagogique
-        avatar: https://learninglab.gitlabpages.inria.fr/serious-game/smartphone/blog/img/SabahKhalfa.jpeg
+        avatar: https://phoneimpact.inria.fr/blog/img/SabahKhalfa.jpeg
         url: https://www.linkedin.com/in/sabah-khalfa-ab24749/
     pauline:
         name:  Pauline Robic
         description: Cheffe de projet Numérique et Ecologie
-        avatar: https://learninglab.gitlabpages.inria.fr/serious-game/smartphone/blog/img/PaulineRobic.jpg
+        avatar: https://phoneimpact.inria.fr/blog/img/PaulineRobic.jpg
         url: https://www.linkedin.com/in/pauline-robic-b6b4a414b/
-    Association pour l’Informatique participative:
+    AssociationInformatiqueParticipative:
         name: Association pour l’Informatique participative
         description: Médiation, reconditionnement et promotion des logiciels libre sont les 3 activités de l'association
-        avatar: https://learninglab.gitlabpages.inria.fr/serious-game/smartphone/blog/img/logo_informatique_participative.png
+        avatar: https://phoneimpact.inria.fr/blog/img/InformatiqueParticipative.jpg
         url: https://www.linkedin.com/company/informatique-participative/
