correction path des cards

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: "Jeu sérieux : PhoneImpact"
-site_url: https://learninglab.gitlabpages.inria.fr/serious-game/smartphone
+site_url: https://phoneimpact.inria.fr
 repo_url: https://gitlab.inria.fr/learninglab/serious-game/smartphone
 repo_name: Source
 use_directory_urls: false
