--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,10 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install MkDocs + theme
+      - name: Install deps
         run: |
-          pip install mkdocs-material mkdocs-macros-plugin
-
+          pip install -r requirements.txt
+          
       - name: Build MkDocs site
         run: mkdocs build --clean --site-dir site
 
